--- a/main.css
+++ b/main.css
@@ -106,16 +106,46 @@ html, body {
 
 
 
-
-
-
-
 .content__column2 {
     flex: 1 0 60%;
     padding: 0px 40px 0px 60px;
     position: relative;
 }
 
+
+
+
+
+.footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 50;
+}
+.footer__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer__row {
+    display: flex;
+    background: #752326;
+    padding: 20px 90px 20px 90px;
+    color: #cdcdb8;
+}
+.footer__language {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 35px 0px 35px;
+}
+.footer__name {
+    padding: 10px 5px 5px 5px;
+}
+.footer__point {
+    padding: 10px 5px 5px 5px;
+}
 @media screen and (max-width: 1150px) {
 .header {
     width: 100%;
