--- a/main.css
+++ b/main.css
@@ -41,7 +41,16 @@ html, body {
     padding: 15px 0px 15px 0px;
     align-items: center;
     justify-content: center;
+}
+.menu__item {
+    list-style: none;
+    padding: 0px 10px 0px 10px;
+}
+.menu__link {
+    text-decoration: none;
     color: #cdcdb8;
+    font-size: 22px;
+
 }
 
 
@@ -134,6 +143,7 @@ html, body {
 
 
 .content__column2 {
+    margin-top: 100px;
     flex: 1 0 60%;
     padding: 0px 40px 0px 60px;
     position: relative;
@@ -145,10 +155,43 @@ html, body {
 .content__column3 {
     flex: 1 1 60%;
     padding: 0px 30px 0px 0px;
+    
 }
 
 
+.education__info div {
+   margin: 50px 0;
+}
+.education__title {
+    margin: 60px 0px 40px 0px;
+    color: #752326;
+    -webkit-text-fill-color: rgb(117, 35, 38);
+    letter-spacing: 15px;
+    text-shadow: 1px 1px 2px #967879;
+    font-size: 30px;
+    position: relative;
+}
+.education__medium-title {
+    color: #752326;
 
+}
+
+.education__bolt-title {
+    list-style: none;
+    font-weight: 700;
+}
+.education__dark  {
+    list-style: none;
+}
+
+.education__dark a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #202020;
+}
+.education__dark a:hover {
+    color: blue;
+}
 
 .content__column4 {
     flex: 1 1 40%;
